--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width>, initial-scale=1.0">
-    <title>Document</title>
+    <title>DERS</title>
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
     <h1>Welcome to DERS</h1>
